# LC3

./: .gitignore  Algorithm.hpp  Assembler.cpp  Assembler.hpp  CMakeLists.txt  Callback.hpp  Console.hpp  Debug.hpp  Diagnostic.hpp  Disassembler.cpp  Disassembler.hpp  Format.cpp  Format.hpp  Notifier.cpp  Notifier.hpp  README.md  Test.cpp  cxxopts.hpp
Lexer/: AssembledToken.cpp  AssembledToken.hpp  File.cpp  File.hpp  Lexer.cpp  Lexer.hpp  Line.cpp  Line.hpp  Match.cpp  Match.hpp  Parser.cpp  Parser.hpp  Requirements.cpp  Requirements.hpp  Symbol.hpp  Token.cpp  Token.hpp  TokenExtras.hpp  Tokenizer.cpp  Tokenizer.hpp  Tokens.hpp
Lexer/Tokens/: Add.cpp  Add.hpp  And.cpp  And.hpp  Binary.cpp  Binary.hpp  Blkw.cpp  Blkw.hpp  Br.cpp  Br.hpp  Character.cpp  Character.hpp  Comment.hpp  Decimal.cpp  Decimal.hpp  End.hpp  Fill.cpp  Fill.hpp  Getc.cpp  Getc.hpp  Halt.cpp  Halt.hpp  Hexadecimal.cpp  Hexadecimal.hpp  Immediate.hpp  In.cpp  In.hpp  Include.hpp  Jmp.cpp  Jmp.hpp  Jmpt.cpp  Jmpt.hpp  Jsr.cpp  Jsr.hpp  Jsrr.cpp  Jsrr.hpp  Label.hpp  Ld.cpp  Ld.hpp  Ldi.cpp  (+40 more)
spdlog/: spdlog.h
